feat: fill out handler for topics messages
